Fixed layout issue with space above navbar in mobile layout

--- a/style.scss
+++ b/style.scss
@@ -24,6 +24,10 @@ body {
   overflow-y: auto;
 }
 
+.fixed-top {
+    margin-top:0px;
+}
+
 .container {
   margin: 0 auto;
   max-width: 740px;
